src/snapshots/pepper__tests__mir_tests@function_calls.snap
---
source: src/main.rs
description: "func main() -> int =\n    num(boolean(numm(1)))\n\nfunc numm(a: int) -> int =\n    a\n\nfunc boolean(a: int) -> int =\n    a\n\nfunc num(a: int) -> int =\n    rec_with_args(1, true, numm)\n\nfunc recursive() -> ! =\n    recursive()\n\nfunc rec_with_args(a: int, b: bool, c: func (int) -> int) -> int =\n    rec_with_args(a, b, c)"
expression: mir
info: tests/mir/function_calls.pr
snapshot_kind: text
---
functions:
  - name: 0
    params: []
    return_ty:
      Primitive: Int
    body:
      expr:
        Call:
          callee:
            expr:
              Variable: 3
            ty:
              Function:
                params:
                  - Primitive: Int
                return_ty:
                  Primitive: Int
          args:
            - expr:
                Call:
                  callee:
                    expr:
                      Variable: 2
                    ty:
                      Function:
                        params:
                          - Primitive: Int
                        return_ty:
                          Primitive: Int
                  args:
                    - expr:
                        Call:
                          callee:
                            expr:
                              Variable: 1
                            ty:
                              Function:
                                params:
                                  - Primitive: Int
                                return_ty:
                                  Primitive: Int
                          args:
                            - expr:
                                Int: 1
                              ty:
                                Primitive: Int
                      ty:
                        Primitive: Int
              ty:
                Primitive: Int
      ty:
        Primitive: Int
  - name: 1
    params:
      - name: 6
        ty:
          Primitive: Int
    return_ty:
      Primitive: Int
    body:
      expr:
        Variable: 6
      ty:
        Primitive: Int
  - name: 2
    params:
      - name: 7
        ty:
          Primitive: Int
    return_ty:
      Primitive: Int
    body:
      expr:
        Variable: 7
      ty:
        Primitive: Int
  - name: 3
    params:
      - name: 8
        ty:
          Primitive: Int
    return_ty:
      Primitive: Int
    body:
      expr:
        Call:
          callee:
            expr:
              Variable: 5
            ty:
              Function:
                params:
                  - Primitive: Int
                  - Primitive: Bool
                  - Function:
                      params:
                        - Primitive: Int
                      return_ty:
                        Primitive: Int
                return_ty:
                  Primitive: Int
          args:
            - expr:
                Int: 1
              ty:
                Primitive: Int
            - expr:
                Bool: true
              ty:
                Primitive: Bool
            - expr:
                Variable: 1
              ty:
                Function:
                  params:
                    - Primitive: Int
                  return_ty:
                    Primitive: Int
      ty:
        Primitive: Int
  - name: 4
    params: []
    return_ty: Never
    body:
      expr:
        Call:
          callee:
            expr:
              Variable: 4
            ty:
              Function:
                params: []
                return_ty: Never
          args: []
      ty: Never
  - name: 5
    params:
      - name: 9
        ty:
          Primitive: Int
      - name: 10
        ty:
          Primitive: Bool
      - name: 11
        ty:
          Function:
            params:
              - Primitive: Int
            return_ty:
              Primitive: Int
    return_ty:
      Primitive: Int
    body:
      expr:
        Call:
          callee:
            expr:
              Variable: 5
            ty:
              Function:
                params:
                  - Primitive: Int
                  - Primitive: Bool
                  - Function:
                      params:
                        - Primitive: Int
                      return_ty:
                        Primitive: Int
                return_ty:
                  Primitive: Int
          args:
            - expr:
                Variable: 9
              ty:
                Primitive: Int
            - expr:
                Variable: 10
              ty:
                Primitive: Bool
            - expr:
                Variable: 11
              ty:
                Function:
                  params:
                    - Primitive: Int
                  return_ty:
                    Primitive: Int
      ty:
        Primitive: Int
externs: []
