src/snapshots/pepper__tests__mir_tests@unary_ops.snap
---
source: src/main.rs
description: "func main() -> number = 0\nfunc neg(a: number) -> number = -a\nfunc not(a: bool) -> bool = !a"
expression: mir
info: tests/mir/unary_ops.pr
snapshot_kind: text
---
functions:
  - name: 0
    params: []
    return_ty:
      Primitive: Number
    body:
      expr:
        Number: 0
      ty:
        Primitive: Number
  - name: 1
    params:
      - name: 3
        ty:
          Primitive: Number
    return_ty:
      Primitive: Number
    body:
      expr:
        Intrinsic:
          NegNumber:
            expr:
              expr:
                Variable: 3
              ty:
                Primitive: Number
      ty:
        Primitive: Number
  - name: 2
    params:
      - name: 4
        ty:
          Primitive: Bool
    return_ty:
      Primitive: Bool
    body:
      expr:
        Intrinsic:
          NotBool:
            expr:
              expr:
                Variable: 4
              ty:
                Primitive: Bool
      ty:
        Primitive: Bool
