src/snapshots/pepper__tests__parser_tests@empty_function.snap
---
source: src/lib.rs
description: "func empty_function() {}"
expression: ast.unwrap()
info: tests/parser/empty_function.pr
input_file: tests/parser/empty_function.pr
snapshot_kind: text
---
- Function:
    name: empty_function
    params: []
    return_ty: ~
    body:
      statements: []
      return_expr: ~
