src/snapshots/pepper__tests__parser_tests@tests_parser_function_signatures_empty.pr.snap
---
source: src/lib.rs
description: func empty_function() = ()
expression: ast.unwrap()
input_file: tests/parser/function_signatures/empty.pr
snapshot_kind: text
---
- Function:
    name: empty_function
    generics: ~
    params: []
    return_ty: ~
    body:
      Tuple: []
