src/snapshots/pepper__tests__parser_tests@tests_parser_function_signatures_multiple_params.pr.snap
---
source: src/lib.rs
description: "func multiple_params(a Int32, bb Float32, ccc Bool) = ()"
expression: ast.unwrap()
input_file: tests/parser/function_signatures/multiple_params.pr
snapshot_kind: text
---
- Function:
    name: multiple_params
    params:
      - name: a
        ty:
          Primitive:
            base: Int32
            segments: []
      - name: bb
        ty:
          Primitive:
            base: Float32
            segments: []
      - name: ccc
        ty:
          Primitive:
            base: Bool
            segments: []
    return_ty: ~
    body:
      Tuple: []
